--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,11 @@
-
-.course-container{
+.courses-container{
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+@media screen and (min-width:320px) and (max-width: 420px){
+  .courses-container{
+    display:grid;
+    grid-template-columns: 1fr;
+  }
 }
