--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,7 @@
+.navbar-home {
+  background: antiquewhite;
+}
+
 @media screen and (min-width: 320px) and (max-width: 420px) {
   .navbar-home {
     margin-bottom: 4.5rem;
