--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,9 @@
 
 @media screen and (min-width: 320px) and (max-width: 420px) {
   .navbar-home {
-    margin-bottom: 4.5rem;
+    margin-bottom: 5rem;
+  }
+  .logo{
+    margin-right: 10%;
   }
 }
